<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/extra"
        android:id="@+id/tvEExtra"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_title"
        android:background="@drawable/bg1"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/pt10"
        android:weightSum="100">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="85"
            android:id="@+id/lvELesson" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bg1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/img_EVol"
                    android:src="@drawable/vol1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary_bt"
                    android:id="@+id/tvEVol"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/img_EExer"
                    android:src="@drawable/fav1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_bt"
                    android:id="@+id/tvEExer"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/img_ETest"
                    android:src="@drawable/pro1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_bt"
                    android:id="@+id/tvETest"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/img_EExtra"
                    android:src="@drawable/story1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_bt"
                    android:id="@+id/tvEExtra"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>