<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <TextView
        android:id="@+id/tvVVocabulary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/bg1"
        android:gravity="center"
        android:text="@string/vocabulary"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_title" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/bg2"
        android:orientation="vertical"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="85"
            android:background="@drawable/pt10"
            android:weightSum="100" >

            <ListView
                android:id="@+id/lvVol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollingCache="true" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:background="@drawable/bg1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_Vvol"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/vol1" />

                <TextView
                    android:id="@+id/tvVVol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_Vexer"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/fav1" />

                <TextView
                    android:id="@+id/tvVexer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_Vtest"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/pro1" />

                <TextView
                    android:id="@+id/tvVtest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_Vextra"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/story1" />

                <TextView
                    android:id="@+id/tvVExtra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_bt"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>