<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical"
    android:weightSum="90" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:background="@drawable/header" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vol" />

            <TextView
                android:id="@+id/tvVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/vocabulary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgExer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fav" />

            <TextView
                android:id="@+id/tvExer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/exercise" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pro" />

            <TextView
                android:id="@+id/tvTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/test" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imgStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/story" />

            <TextView
                android:id="@+id/tvStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/extra" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
