<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pt10"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/tvTtest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/bg1"
        android:gravity="center"
        android:text="@string/test"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/pt10"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_weight="40"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/test"
            android:orientation="horizontal"
            android:paddingTop="20dp" >
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgTOnline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vol" />

                <TextView
                    android:id="@+id/tvTOnline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST ONLINE"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgTOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/vol" />

                <TextView
                    android:id="@+id/tvTOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TEST OFFLINE"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:background="@drawable/bg1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_TVol"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/vol1" />

                <TextView
                    android:id="@+id/tvTVol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_TExer"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/fav1" />

                <TextView
                    android:id="@+id/tvTExer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_TTest"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/pro1" />

                <TextView
                    android:id="@+id/tvTTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_bt"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_TExtra"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/story1" />

                <TextView
                    android:id="@+id/tvTExtra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
