<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:background="@drawable/bg1"
        android:layout_gravity="center"
        android:gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/pre"
                android:id="@+id/previous"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:text=""
                android:id="@+id/tvExtra_lesson"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_title"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/pt10"
        android:weightSum="100">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="30">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgE"
                />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvExtra_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="gravity"
                    android:text=" "
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:layout_margin="10dp"
                    />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bg1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="25"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/imgELvol"
                    android:src="@drawable/vol1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary_bt"
                    android:id="@+id/tvVol"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/imgELexer"
                    android:src="@drawable/fav1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_bt"
                    android:id="@+id/tvExer"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/imgELtest"
                    android:src="@drawable/pro1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_bt"
                    android:id="@+id/tvETest"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:id="@+id/imgELextra"
                    android:src="@drawable/story1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_bt"
                    android:id="@+id/tvExtra"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>